# plast2

./: .gitignore  .gitmodules  CMakeLists.txt  TODO
client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
common/: BuildingMessage.h  HandshakeMessage.h  HasJobsMessage.h  HttpServer.cpp  HttpServer.h  JobMessage.h  JobResponseMessage.h  LastJobMessage.h  Messages.cpp  Messages.h  PeerMessage.h  Plast.cpp  Plast.h  RequestJobsMessage.h  WebSocket.cpp  WebSocket.h  common.cmake
daemon/: CMakeLists.txt  CompilerArgs.cpp  CompilerArgs.h  Daemon.cpp  Daemon.h  Job.cpp  Job.h  Local.cpp  Local.h  Preprocessor.cpp  Preprocessor.h  ProcessPool.cpp  ProcessPool.h  Remote.cpp  Remote.h  main.cpp
messages/: HasJobsMessage.h  JobMessage.h  messages.cmake
scheduler/: CMakeLists.txt  Messages.cpp  Messages.h  Peer.cpp  Peer.h  Scheduler.cpp  Scheduler.h  main.cpp
scheduler/stats/: stats.html  stats.js
server/: CMakeLists.txt  main.cpp
tests/: websocket.html
